@@ -955,6 +955,8 @@ Extension Modules
 Tests
 -----
 
+- Issue #11963: remove human verification from test_parser and test_subprocess.
+
 - Issue #11732: add a new suppress_crash_popup() context manager to test.support
   that disables crash popups on Windows and use it in test_capi.
 
